@@ -656,8 +656,6 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                            <property name="pixbuf_column">0</property>
-                            <property name="markup_column">1</property>
                             <property name="selection_mode">GTK_SELECTION_BROWSE</property>
                             <property name="item_width">150</property>
                             <property name="spacing">3</property>
